--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <img src="img/logo-light.png" alt="Skillbox">
     </a>
     <div>
-      <a href="#">Modules</a> <a href="article.html">Indents</a>
+      <a href="#">Modules</a> <a href="article.html">I</a>
     </div>
-      
+
 
   </body>
 </html>
