--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="img/logo-light.png" alt="Skillbox">
     </a>
     <div>
-      <a href="#">Modules</a> <a href="article.html">Indents</a>
+      <a href="#">Modules</a> <a href="article.html">s</a>
     </div>
       
 
