--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
     <div>
       <a href="#">Modules</a> <a href="article.html">I</a>
 
+
     </div>
     <div>
-      adasd ASSAD
+      ВЫберите способо доставки
+    </div>
+    <div>
+      ВЫберите способо доставки
     </div>
 
+      <p>qwqweqweqwe</p>
   </body>
 </html>
